Fixes occasion factoids not aligning nicely over multiple lines

--- a/src/onegov.feriennet/onegov/feriennet/theme/styles/feriennet.scss
+++ b/src/onegov.feriennet/onegov/feriennet/theme/styles/feriennet.scss
@@ -189,6 +189,7 @@ ul.tags {
 ul.occasions {
     list-style: none;
     margin: 0;
+    position: relative;
 
     h4 {
         font-size: 1rem;
@@ -214,30 +215,33 @@ ul.occasions {
             font-size: .875rem;
             margin-top: .25rem;
         }
+    }
 
-        .factoids {
-            margin-bottom: .75rem;
+    .factoids {
+        margin: 0 0 .75rem 1.25rem;
+
+        .location:before,
+        .age:before,
+        .spots:before {
+            display: inline-block;
+            left: -2px;
+            position: absolute;
+            width: .625rem;
+            text-align: center;
+        }
+
+        .location:before {
+            @include icon('\f041');
+        }
+
+        .age:before {
+            @include icon('\f1ae');
+        }
+
+        .spots:before {
+            @include icon('\f105');
         }
     }
-
-    .location:before {
-        @include icon('\f041');
-        display: inline-block;
-        width: 1.25em;
-    }
-
-    .age:before {
-        @include icon('\f1ae');
-        display: inline-block;
-        width: 1.25em;
-    }
-
-    .spots:before {
-        @include icon('\f105');
-        display: inline-block;
-        width: 1.25em;
-    }
-
 }
 
 .occasion-links a:first-child:before {
